[package]
name = "train"
version = "0.1.0"
authors = ["Emmanuel Antony <emmanuelantony2000@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.39"
num_cpus = "1.13.0"
reqwest = "0.11.2"
tokio = { version = "1.4.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }

[profile.release]
lto = true
codegen-units = 1