[package]
name = "train"
version = "0.1.0"
authors = ["Emmanuel Antony <emmanuelantony2000@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.39"
crossbeam = "0.8.0"
num_cpus = "1.13.0"
structopt = "0.3.21"
thiserror = "1.0.24"
threadpool = "1.8.1"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
ureq = "2.0.2"
url = "2.2.1"

[profile.release]
lto = true
codegen-units = 1
